web/src/components/Login/Login.module.css
.halvedPage {
    display: flex;
    height: 100vh;
    color: white;
}

.leftHalf {
    flex: 1;
    width: 50%;
    background-color: #ffffff;
}

.rightHalf {
    flex: 1;
    width: 50%;
    background-color: #000000;
}

.logo {
    position: absolute;
    top: 20px;
    right: 20px;
}

.logo img {
    width: 241px;
    height: 32px;
}

.formContainer {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    height: 100%;
}

.formContainer h1 {
    font-size: 48px;
    font-weight: normal;
    margin-bottom: 20px;
}

.formContainer form {
    display: flex;
    flex-direction: column;
    width: 100%;
    max-width: 400px;
}

.formContainer input[type="email"],
.formContainer input[type="password"] {
    padding: 10px;
    margin-bottom: 10px;
    border: 1px solid #000000;
    width: 100%;
    height: 50px;
    border-radius: 5px;
}

.checkboxes label {
    font-size: 20px;
    display: inline-block;
    padding-right: 10px;
    white-space: nowrap;
}

.checkboxes input {
    vertical-align: middle;
}

.checkboxes label span {
    vertical-align: middle;
}

input[type='checkbox'] {
    width:25px;
    height:25px;
}

.formContainer button {
    padding: 10px;
    font-size: 30px;
    font-weight: bold;
    background-color: #0091FF;
    color: white;
    border: none;
    border-radius: 5px;
    cursor: pointer;
}

.formContainer p {
    font: 20px;
    margin-bottom: 0;
}

.formContainer a {
    font: 20px;
    font-weight: bold;
    color: #0091FF;
    text-decoration: none;
}

/* Responsive design for smaller screens */
@media (max-width: 860px) {
    .leftHalf {
        display: none;
    }

    .rightHalf {
        position: relative;
    }

    .logo {
        position: relative;
        text-align: center;
        display: block; 
        margin: 0 auto; 
        top: 15%;
        left: 50%;
        transform: translate(-50%, -50%);
    }

    .logo img {
        display: inline-block;
    }

    .formContainer {
        position: absolute;
        width: 80%;
        top: 50%;
        left: 50%;
        transform: translate(-50%, -50%);
    }
}

